--- a/front-end/Main-Page/style.css
+++ b/front-end/Main-Page/style.css
@@ -562,8 +562,9 @@ footer {
   width: calc(100% - 120px);
   padding: 8px;
   margin-right: 10px;
+  margin-bottom: 10px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 44px;
 }
 
 button {
